Web.UI/Content/css/style.css
/* ... */
.ftr-col-layout {
    padding: 0px !important;
}

.features-layout {
    min-height: 200px ;
    display:block;
    background-position:top center;
    background-repeat:no-repeat;
    border-left:1px solid #fff;
    border-right: 1px solid #fff;
    border-top: 3px solid #fff;
    border-bottom: 3px solid #fff;
    text-align: center;
    font-size: 16px;
    font-weight: 100;
    line-height: 1;

}

.ftr-a{
    color: #fff;
    padding-top: 120px;
}

.ftr-h5 {
    color: #666;
    margin: 0px;
    margin-bottom: -3px;
}

 .personInfo {
        background: rgba(240, 240, 240, .99);
        width: 400px;
        height: 260px;
        padding: 7px;
        float: none;
        margin-left: auto;
        margin-right: auto;
        box-shadow: 4px 7px 5px 2px rgba(200, 200, 200, 0.1);
        border: 1px solid rgb(168, 168, 168);
        border-radius: 10px;
        display: none;
        position: absolute;
}

#findPersonForm .form-control-feedback {
     right: 15px;
}

#findPersonForm .selectContainer .form-control-feedback {
     right: 25px;
}

